Fix display bug in the demo
The text overflowed when the output contained long lines.
Fix it by adding "overflow:hidden" to the output element.

--- a/GUI/demo.css
+++ b/GUI/demo.css
@@ -59,6 +59,10 @@ h1 {
 	overflow:hidden;
 }
 
+#output {
+	overflow: auto;
+}
+
 table {
 	width:auto;
 	margin:auto;
